# src/Middagsasen.Planner.Api/Services/Events/MinimumStaffRequest.cs
@@ -1,7 +1,0 @@
-﻿namespace Middagsasen.Planner.Api.Services.Events
-{
-    public class MinimumStaffRequest
-    {
-        public int MinimumStaff { get; set; } = 0;
-    }
-}
