# src/Middagsasen.Planner.Api/Services/Events/MinimumStaffResponse.cs
@@ -1,8 +1,0 @@
-﻿namespace Middagsasen.Planner.Api.Services.Events
-{
-    public class MinimumStaffResponse
-    {
-        public int MinimumStaff { get; set; }
-        public int EventResourceId { get; set; }
-    }
-}
