# src/Middagsasen.Planner.Web/src/types/index.ts
@@ -34,7 +34,6 @@ export type MeasurementValueResponse = Schemas["MeasurementValueResponse"];
 export type MessageRequest = Schemas["MessageRequest"];
 export type MessageResponse = Schemas["MessageResponse"];
 export type MinimumStaffRequest = Schemas["MinimumStaffRequest"];
-export type MinimumStaffResponse = Schemas["MinimumStaffResponse"];
 export type OtpRequest = Schemas["OtpRequest"];
 export type OtpResponse = Schemas["OtpResponse"];
 export { OtpStatus } from "./enums";
